<resources>
    <string name="app_name">OrderToHome</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="monetary_unit">грн</string>
    <string name="unit">g</string>
    <string name="menu">Menu</string>
    <string name="sorting">Sort</string>
    <string name="sort_price">Price</string>
    <string name="sort_weight">Weight</string>
    <string name="sort_name">Name</string>
    <string name="weight">Weight</string>
    <string name="content">Content</string>
    <string name="history">History</string>
    <string name="promotions">Promotions</string>
    <string name="my_order">My order</string>
    <string name="profile">Profile</string>
    <string name="information">Information</string>
    <string name="help">Help</string>
    <string name="use_phone_number">Use your mobile phone number to sign in to your Profile</string>
    <string name="sign_in_phone">Sign in with your phone number</string>
    <string name="logining">When you sign in, you accept the</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="sign_in_social">Sign in with social network</string>
    <string name="classic_sign_in">Sign in by E-mail and password</string>
    <string name="input_phone_number">Input phone number</string>
    <string name="send_code">Send code</string>
    <string name="cancel">Cancel</string>
    <string name="error_sending_invalid_number">Error sending: Invalid number</string>
    <string name="bonuses">bonuses</string>
    <string name="on_your_bonus_account">On your bonus account</string>
    <string name="how_to_accumulate_a_bonus">HOW TO ACCUMULATE A BONUS?</string>
    <string name="edit">Edit</string>
    <string name="sign_out">Sign out</string>
    <string name="e_mail" translatable="false">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign up</string>
    <string name="authentication_failed">Authentication failed!</string>
    <string name="password_again">Password again</string>
    <string name="empty_email">Empty Email!</string>
    <string name="your_order_is_empty">Your order is empty</string>
    <string name="we_have_many_dishes_on_the_menu_you_are_sure_to_find_something_that_you_like">We have many dishes on the menu, you are sure to find something that you like</string>
    <string name="go_to_menu">Go to menu</string>
    <string name="total">"Total "</string>
    <string name="dishes_on">" dishes on "</string>
    <string name="empty">Empty</string>
    <string name="i_want_to_make_an_order">I WANT TO MAKE AN ORDER!</string>
    <string name="clear_order_dialog">Are you sure you want to clear the order?</string>
    <string name="clear">Clear</string>
    <string name="confirmation_order">Confirmation of an order</string>
    <string name="dishes_for_the_amount_of">dishes for the amount of</string>
    <string name="delivery_data">Delivery data</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="comment">Comment</string>
    <string name="address">Address</string>
    <string name="street">Street</string>
    <string name="building">Building</string>
    <string name="flat_office">Flat / Office</string>
    <string name="comment_to_delivery">Comment to delivery</string>
    <string name="delayed_delivery">Delayed delivery</string>
    <string name="ctn_btn">CONTINUE</string>

    <array name="sort_array">
        <item>@string/sort_name</item>
        <item>@string/sort_weight</item>
        <item>@string/sort_price</item>
    </array>
</resources>
