<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.ConfirmOrder"
    android:background="@color/colorAppBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/dishes_for_the_amount_of"
                android:textAlignment="center"
                android:textColor="@color/colorTitleText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delivery_data"
                android:textColor="@color/colorPriceText"
                android:textStyle="bold"
                android:layout_marginTop="24dp"/>

            <EditText
                android:id="@+id/edPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                android:theme="@style/styleEditText" />

            <EditText
                android:id="@+id/edName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:theme="@style/styleEditText" />

            <EditText
                android:id="@+id/edOrderComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/comment"
                android:inputType="textPersonName"
                android:theme="@style/styleEditText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:orientation="vertical"
                android:background="@color/colorWeightText"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/colorPriceText"
                android:textStyle="bold"
                android:layout_marginTop="16dp"/>

            <EditText
                android:id="@+id/edStreet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/street"
                android:inputType="textPersonName"
                android:theme="@style/styleEditText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edBuilding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/building"
                    android:inputType="number"
                    android:theme="@style/styleEditText" />

                <EditText
                    android:id="@+id/edFlat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/flat_office"
                    android:inputType="number"
                    android:theme="@style/styleEditText" />
            </LinearLayout>

            <EditText
                android:id="@+id/edDeliveryComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/comment_to_delivery"
                android:inputType="textPersonName"
                android:theme="@style/styleEditText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorWeightText"
                android:orientation="vertical" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/delayed_delivery"
                android:textColor="@color/colorTitleText"
                android:textSize="16sp"
                android:buttonTint="@color/colorContentText"
                android:layout_marginBottom="48dp"/>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/layoutConfirm"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPriceText"
        android:fitsSystemWindows="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/ctn_btn"
            android:textAlignment="center"
            android:textColor="@color/colorBarText"
            android:textSize="16sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>